# libs/types/src/dtos/account/graphs.request.dto.ts
@@ -1,5 +1,5 @@
 // eslint-disable-next-line max-classes-per-file
-import { ArrayNotEmpty, IsArray, IsEnum, IsNotEmpty, ValidateIf, ValidateNested } from 'class-validator';
+import { ArrayNotEmpty, IsArray, IsEnum, IsNotEmpty, IsOptional, ValidateIf, ValidateNested } from 'class-validator';
 import { ApiProperty } from '@nestjs/swagger';
 import { HexString } from '@polkadot/util/types';
 import { IsHexValue } from '#utils/decorators';
@@ -134,4 +134,13 @@ export class PublicKeyAgreementsKeyPayload {
    */
   @IsHexValue({ minLength: 64, maxLength: 64 })
   newKey: HexString;
-}
+
+  /**
+   * Schema Id - The number of the schema to generate the payload for
+   * @example 16299
+   * @default DSNP graph key schema value for configured Frequency chain
+   **/
+  @IsSchemaId()
+  @IsOptional()
+  schemaId: number;
+};
